--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
 title: 苗新国的博客
 url: "http://miaoxinguo.github.io"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
-baseurl: "/miaoxinguo.github.io" # the prefix of your site uri, eg. `/jekyll-theme-EasyBook` or just one slash `/`
+baseurl: "/" # the prefix of your site uri, eg. `/jekyll-theme-EasyBook` or just one slash `/`
 #timezone: Asia/Chongqing
 description: >
-  One or more sentences introducing this blog.
+  正在搭建中的博客...
 
 # Your information
 email: miaoxinguo2002@163.com
 author: 苗新国
 avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
-profile: One sentence introducing yourself.
+profile: 正在尝试搭建博客.
 #twitter_username: twitter_username
 #github_username:  github_username
 
