--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,13 @@ title: 苗新国的博客
 url: "http://miaoxinguo.github.io"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
 baseurl: ""     # the prefix of your site uri, eg. `/jekyll-theme-EasyBook` or just one slash `/`
 timezone: Asia/Shanghai
-description: >
-  正在搭建中的博客...
 
 # Your information
 email: miaoxinguo2002@163.com
 author: 苗新国
 avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
-profile: 正在尝试搭建博客.
-#twitter_username: twitter_username
-#github_username:  github_username
+aboutme: 正在折腾博客，转移散落在各处的博文到这里来
+github_username: miaoxinguo
 
 # Comment Service (Disqus or 多说)
 #  choose one and un-comment the line to active it
@@ -36,8 +33,6 @@ kramdown:
   input: GFM
 
 ### Site setting:
-ShowContactInfo: "True" # Personal Info (twitter,github,email) can be seen on aboutme-sidebar, those info only shown where ShowContactInfo == True
-default_column: "two" # blog style: two columns, if default_column != "two", you will see a one column blog.
 default_locale: "cn" # blog sidebar language set, only include: English (en), Chinese (cn), Japanese (jp) and Polish (pl)
 
 locales:
@@ -46,7 +41,6 @@ locales:
       Archives: "存档"
       Blogroll: "良师益友"        
       Categories: "分类目录"    
-      Copyright_Notice: "版权声明"
       Recent_Posts: "近期文章"
       Tags: "标签" 
       Previous: "前一页"
@@ -54,8 +48,12 @@ locales:
       PostedInCategories: "目录:"   
       Taggedwith: "| 标签:"
       PostDate: "| 发表时间: "
-      Google_search: "站内搜索"
       Home: "首页"
       About: "关于"
       Guestbook: "留言"
       Subscribe: "订阅"
+
+Blogroll:
+      - name: Coderec's Blog
+        href: http://coderec.cn/
+        title: Coderec's Blog
