--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ timezone: Asia/Shanghai
 # Your information
 email: miaoxinguo2002@163.com
 author: 苗新国
-avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
+aboutme_photo: "http://images.h-ui.net/icon/detail/Avatar/006.gif"
 aboutme: 正在折腾博客，转移散落在各处的博文到这里来
 github_username: miaoxinguo
 
