--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ timezone: Asia/Shanghai
 # Your information
 email: miaoxinguo2002@163.com
 author: 苗新国
-aboutme_photo: "http://images.h-ui.net/icon/detail/Avatar/006.gif"
-aboutme: 正在折腾博客，转移散落在各处的博文到这里来
+aboutme_photo: "https://timgsa.baidu.com/timg?image&quality=80&size=b10000_10000&sec=1467826437755&di=ae90184e8cb21134218b1420acf02f68&imgtype=jpg&src=http%3A%2F%2Fimg.ph.126.net%2Fakiw5P7GJVfKRNbncR19ZA%3D%3D%2F3392336419318070498.jpg"
+aboutme: 沉淀、总结、思考、实践
 github_username: miaoxinguo
 
 # Comment Service (Disqus or 多说)
