--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ timezone: Asia/Shanghai
 # Your information
 email: miaoxinguo2002@163.com
 author: 苗新国
-aboutme_photo: "https://timgsa.baidu.com/timg?image&quality=80&size=b10000_10000&sec=1467826437755&di=ae90184e8cb21134218b1420acf02f68&imgtype=jpg&src=http%3A%2F%2Fimg.ph.126.net%2Fakiw5P7GJVfKRNbncR19ZA%3D%3D%2F3392336419318070498.jpg"
+aboutme_photo: "http://o9z5x996o.bkt.clouddn.com/blog.me.jpeg"
 aboutme: 沉淀、总结、思考、实践
 github_username: miaoxinguo
 
